# todo_pc

./: .gitignore  README.md
.codex/skills/project-commit-convention/: SKILL.md
docs/: ui-plan.md
todo_app/: CMakeLists.txt  floating_focus_widget.cpp  floating_focus_widget.h  installer.nsi  main.cpp  package.ps1  resources.qrc  schedule_table.cpp  schedule_table.h  study_calendar_widget.cpp  study_calendar_widget.h  todo_window.cpp  todo_window.h
